array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nv=0
  var compteur=1
  if (len(num)==1 || (len(num)==2) && num[0]==num[1])){
    nv=nv+1
  }
  else{
    while (num[0] != num[compteur]){
      compteur=compteur+1
    }
    nv=nv+1
    island(num[1:compteur])
  }
}